--- a/config-repo/discovery-service.yml
+++ b/config-repo/discovery-service.yml
@@ -1,13 +1,13 @@
-spring:
-  application:
-    name: discovery-service
-
 eureka:
+  instance:
+    hostname: localhost
   client:
     eureka-server-connect-timeout-seconds: 5
     enabled: true
     fetch-registry: false
     register-with-eureka: false
+  serviceUrl:
+    defaultZone: http://localhost:${server.port}/eureka
 
 server:
   port: 8761
