Adiciona dependecia para resolver problema do bootstrap e ajuste no config-server

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/rafaeldoug/exemplo-microservice-arq-si/config-repo
-          basedir: target/config
+          search-paths:          - config-repo          
+          uri: https://github.com/rafaeldoug/exemplo-microservice-arq-si/
           default-label: main
